public/stylesheets/main.css
img{
  max-width: 100%;
}

article
{
  padding: 5px;
  width: 5px;
  text-align: center;
}

h3 {
    color: white;
    margin-right: 2.5%;
}

html, body, #container {
  /*height: 90%;*/
  max-width: 100%;

}

#notice {
    color: orangered;
}

body {
    background-color: #222222;
}

html{
/*  position:relative;*/
  background-size: 100%;
}

h6, p{
    font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
    color: ghostwhite;
}

h1{
    /*font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;*/
    font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
    color: white;
}

.header{
  margin-top: 5%;
}

.container{
  width:95%;
  max-width: 1500px;
  display:flex ;
  flex-flow:row wrap;
  align-content: space-between;
  margin-top: 3%;
}

#footer {
 clear: both;
 position: relative;
 height: 3em;
 margin-top: -3em;
}

#content {
 padding-bottom: 3em;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    background-color: #333;
}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

#githubTitle {
    color: white;
    text-decoration: none;
}

li a:hover:not(.active) {
    background-color: #111;
}

.active {
    background-color: #4CAF50;
}

#functionsDiv{
    float: right;
}

#paramDiv{
    float: left;
}

input
{
    min-width: 500px;
}

/*media queries*/
@media (max-width: 500px) {

  .container{
      /*width:90%;*/
      display:flex ;
      flex-flow:row wrap;
      align-content: space-between;
      margin-top: 7.5%;
  }
  textarea, input
  {
      min-width: 90%;
      max-width: 90%;
  }
  #githubTitle {
      display: none;
  }

}

